# python-lib-template

./: LICENSE.md.jinja  README.md  README.rst  cookbook.yaml  cookiecutter.json  copier.yml  mkdocs.yml  mkdocs.yml.jinja  pyproject.toml  pyproject.toml.jinja
.github/workflows/: tests.yml.jinja
docs/: CHANGELOG.md  CHANGELOG.md.jinja  README.md  README.md.jinja  installation.md  installation.md.jinja  usage.md
docs/rtd/: .readthedocs.yaml
{{cookiecutter.project_name}}/: .gitignore  CHANGELOG.md  CHANGELOG.rst  README.md  README.rst  cookbook.toml  make.toml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/docs/: CHANGELOG.md  README.md  index.rst  installation.md
{{cookiecutter.project_name}}/docs/source/: conf.py  installation.rst  usage.rst
