[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ["py36", "py37", "py38"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_tests = "tests"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "TESTS"]

[tool.poetry]
name = "{{project_name}}"
version = "0.1.0"
description = ""
authors = []

license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md"]

repository = ""

keywords = []
classifiers=[
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "*", allows-prereleases = true}
isort = "^4.3"

pytest = "^5.1"

ipython = "^7.8"
ipdb = "^0.12"
