[build-system]
requires = [
    "phosphorus>=0.1.1",
]
build-backend = "phosphorus.construction.api"

[project]
name = "{{project_name}}"
version = "0.1.0"

authors = [
    { name = "{{author_name}", email = "{{author_email}}" },
]
license = { text = "LGPLv3+" }

readme = "docs/README.md"
description = "{{description}}"
keywords = [
    "{{main_keyword}}",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"
dependencies = [
    "pyutilkit~=0.4",
]

[project.urls]
homepage = "https://{{project_name}}.readthedocs.io/en/stable/"
repository = "{{project_url}}"
documentation = "https://{{project_name}}.readthedocs.io/en/stable/"


[tool.phosphorus.dev-dependencies]
dev = [
    "ipdb~=0.13; python_version>='3.10'",
    "ipython~=8.21; python_version>='3.10'",
    "pickleshare~=0.7; python_version>='3.10'",
    "pipdeptree~=2.13",
]
lint = [
    "black~=24.1",
    "mypy~=1.8",
    "ruff~=0.5",
]
test = [
    "pytest~=8.0",
    "pytest-cov~=5.0",
    "rencode~=1.0",
]
docs = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.5",
    "mkdocs-material-extensions~=1.3",
    "Pygments~=2.17",
    "pymdown-extensions~=10.8",
]

[tool.black]
target-version = [
    "py39",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
src = [
    "src",
]
target-version = "py39"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PGH",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "ANN101",
    "ANN102",
    "ANN401",
    "COM812",
    "E501",
    "FIX002",
    "TD002",
    "TD003",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "FBT001",
    "PT011",
    "S101",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.ruff.lint.isort]
combine-as-imports = true
forced-separate = [
    "tests",
]
split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = "tests"

[tool.coverage.run]
source = [
    "src/",
]
data_file = ".cov_cache/coverage.dat"

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
