[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ["py36", "py37", "py38"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_tests = "tests"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "TESTS"]

[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [
    "{{cookiecutter.main_author}}",
]

license = "LGPL-3.0+"
readme = "README.md"
include = ["CHANGELOG.md"]

repository = "{{cookiecutter.url}}"

keywords = ["{{cookiecutter.main_keyword}}"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
isort = "^4.3"

pytest = "^5.1"
pytest-cov = "^2.8"
coveralls = "^1.8"

ipython = "^7.8"
ipdb = "^0.12"

flake8 = "^3.7"
flake8-bugbear = "^19.8"
flake8-builtins = "^1.4"
flake8-comprehensions = "^3.1"
flake8-eradicate = "^0.2.3"
flake8-executable = "^2.0"
flake8-mutable = "^1.2"
flake8-tidy-imports = "^3.1"
